crates/gardswag/src/snapshots/gardswag__tests__run_fix-2.snap
---
source: crates/gardswag/src/main.rs
assertion_line: 317
expression: main_interp(&x.0)
---
Integer: 0

