crates/gardswag/src/snapshots/gardswag__tests__run_id.snap
---
source: crates/gardswag/src/main.rs
expression: x
---
- stmts: []
  term:
    offset: 17
    inner:
      Let:
        lhs:
          offset: 21
          inner: id
        rhs:
          offset: 26
          inner:
            Lambda:
              arg: x
              body:
                offset: 29
                inner:
                  Identifier: x
        rest:
          stmts: []
          term:
            offset: 48
            inner:
              Call:
                prim:
                  offset: 48
                  inner:
                    Identifier: id
                arg:
                  offset: 51
                  inner:
                    Integer: 1
- forall: []
  ty:
    Literal: Int

