crates/gardswag/src/snapshots/gardswag__tests__run_update-2.snap
---
source: crates/gardswag/src/tests.rs
expression: result
---
Record(
    {
        #1: PureString(
            "what",
        ),
        #2: PureString(
            "no",
        ),
        #3: Integer(
            50,
        ),
    },
)
